Fixed horizontal overflow so no scrollbar appears.

--- a/assets/css/screenplay-container.scss
+++ b/assets/css/screenplay-container.scss
@@ -9,6 +9,7 @@
     flex-direction: column;
     height: 100%;
     overflow-y: scroll;
+    overflow-x: hidden;
 
     .page-content__header {
       font-weight: 700;
